# libsrt-rs

./: .gitmodules  Cargo.toml  README.md
examples/: net-client.rs  net-server.rs  std-client.rs  std-server.rs  stream-client.rs  stream-server.rs  test-client.rs  test-server.rs
libsrt-sys/: Cargo.toml  build.rs
libsrt-sys/src/: error.rs  ffi.rs  lib.rs  net.rs  poll.rs  socket.rs
libsrt-sys/tests/: echo.rs  poll.rs
src/: lib.rs  net.rs  srt.rs  std_srt.rs  stream.rs
src/low/: mod.rs
tests/: net.rs  stream.rs
