[package]
name = "libsrt-rs"
version = "0.2.0"
readme = "README.md"
keywords = ["srt", "video", "audio"]
authors = ["Byungwan Jun <unipro.kr@gmail.com>"]
edition = "2018"

[dependencies]
libsrt-sys = { path = "libsrt-sys", version = "0.2.0" }

[dev-dependencies]
failure = { version = "0.1.5", default-features = false, features=["std"] }
slab = "0.4.2"

[workspace]
members = [
    ".",
    "libsrt-sys",
]