[package]
name = "libsrt-rs"
version = "0.2.0"
license = "MPL-2.0"
readme = "README.md"
authors = ["Ian Jun <ian@mykoon.com>"]
description = """
Rust binding of the reference implementation of SRT.
"""
keywords = ["srt", "protocol", "multimedia"]
categories = ["API bindings", "Multimedia", "Network programming"]
edition = "2018"

[dependencies]
libsrt-sys = { path = "libsrt-sys", version = "0.2.0" }

[dev-dependencies]
failure = { version = "0.1.5", default-features = false, features=["std"] }
slab = "0.4.2"

[workspace]
members = [
    ".",
    "libsrt-sys",
]