[package]
name = "libsrt-rs"
version = "0.2.0"
license = "MPL-2.0"
readme = "README.md"
authors = ["Ian Jun <ian@mykoon.com>"]
description = """
Rust binding of the reference implementation of SRT.
"""
keywords = ["srt", "protocol", "multimedia"]
categories = ["api-bindings", "Multimedia", "network-programming"]
edition = "2018"

[dependencies]
libsrt-sys = { path = "libsrt-sys", version = "0.2.0" }
log = "0.4"

[dev-dependencies]
failure = { version = "0.1", default-features = false, features=["std"] }
env_logger = { version = "0.4", default-features = false }
slab = "0.4"
bytes = "0.5"

[workspace]
members = [
    ".",
    "libsrt-sys",
]
