[package]
name = "libsrt-sys"
version = "0.2.0"
authors = ["Ian Jun <ian@mykoon.com>"]
keywords = ["srt", "protocol", "multimedia", "ffi"]
categories = ["external-ffi-bindings", "multimedia", "network-programming"]
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.7"
cmake = "0.1"
